# ChangeLog for sys-apps/mlocate
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/mlocate/ChangeLog,v 1.81 2010/11/15 12:31:09 jer Exp $

  15 Nov 2010; Jeroen Roovers <jer@gentoo.org> mlocate-0.23.1.ebuild:
  Stable for PPC (bug #343987).

  14 Nov 2010; Raúl Porcel <armin76@gentoo.org> mlocate-0.23.1.ebuild:
  ia64/sparc stable wrt #343987

  14 Nov 2010; <mattst88@gentoo.org> mlocate-0.23.1.ebuild:
  alpha stable, bug #343987.

  09 Nov 2010; Markus Meier <maekke@gentoo.org> mlocate-0.23.1.ebuild:
  arm stable, bug #343987

  05 Nov 2010; Markos Chandras <hwoarang@gentoo.org> mlocate-0.23.1.ebuild:
  Stable on amd64 wrt bug #343987

  04 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> mlocate-0.23.1.ebuild:
  ppc64 stable wrt #343987

  04 Nov 2010; Jeroen Roovers <jer@gentoo.org> mlocate-0.23.1.ebuild:
  Stable for HPPA (bug #343987).

  04 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
  mlocate-0.23.1.ebuild:
  stable x86, bug 343987

  04 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> mlocate-0.23.1.ebuild:
  Keyword ~mips wrt #338426 (again, thanks to mattst88 for testing).

  04 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> mlocate-0.23.1.ebuild:
  Keyword ~alpha wrt #338426 (thanks to mattst88 for testing).

  05 Oct 2010; Jeroen Roovers <jer@gentoo.org> mlocate-0.22.4.ebuild,
  mlocate-0.23.1.ebuild:
  Marked ~hppa (bug #338426).

  03 Oct 2010; Raúl Porcel <armin76@gentoo.org> mlocate-0.22.4.ebuild:
  ia64 stable wrt #338430

  26 Sep 2010; Samuli Suominen <ssuominen@gentoo.org> mlocate-0.22.4.ebuild:
  ppc64 stable wrt #338430

*mlocate-0.23.1 (24 Sep 2010)

  24 Sep 2010; Mike Frysinger <vapier@gentoo.org> +mlocate-0.23.1.ebuild:
  Version bump #338432 by Samuli Suominen.

  23 Sep 2010; Markus Meier <maekke@gentoo.org> mlocate-0.22.4.ebuild:
  add ~arm, bug #338426

  11 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  -mlocate-0.22.2-r1.ebuild, -files/mlocate.cron-r1: