@@ -1,9 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX mlocate-cron.conf 237 RMD160 ab1a0e1a4fb6169bb4ce8ae71af2f9854b97bffb SHA1 893c15f186908b78b67896c4f61d11d92a4d0473 SHA256 97710bbb9d5ff0d1985a2685522789210dd677db22d72e7417bff4645e394655
 AUX mlocate.cron-r2 431 RMD160 34ee30b7713856bd29917d61d41ddfc793863ad6 SHA1 7a1818e52b2b58d2fc5f98d838b0af219e409979 SHA256 5879c2576db731482fbc6ab31d86c92132545b37d15ba70a2e920fb0cbb46d80
-AUX updatedb.conf 650 RMD160 a6de9490fe4bd2ed81660a2b50e8f429c04a612c SHA1 590b1496d8488f8a04f89d08397d7635cfebcf4d SHA256 180cc37bbe3327ec25dbd8468d3338e6778a82313e1ba63129b2e6a1782d4ebc
+AUX updatedb.conf 657 RMD160 d95e15d659af3f39fc8c301e2884230ec87afd77 SHA1 8787f0d9dea1b5876acc5da47e7ca534e8d0ec4a SHA256 dba0f9297c2534f8090bcadb70ef8ab7bfafd3e063eab8158bced94778638f1a
 DIST mlocate-0.22.4.tar.xz 336512 RMD160 dc579d0bc1e7a70d618e0a6c115abb2797745f2c SHA1 6ce3caf02ac89f15c3c44f6eda7030708aa8b1ad SHA256 f6c26fd1a6739ac8ee36018a6b54551440257e8606082272cb3e43c69a56897e
 DIST mlocate-0.23.1.tar.xz 347960 RMD160 d124b2f67a1a6ad1731cc3414febd8429228c88d SHA1 1c8d10a6ae8185b8e7c88091d383563650e69ece SHA256 cec92e2fd946f14d236d5e85570bddb5c487b3e1d8a6f1a2691bb1f07d696ff7
 EBUILD mlocate-0.22.4.ebuild 1375 RMD160 2ef5c187c64889025b6290f55e16e6268ca3bbd4 SHA1 d576ce437f792c66def62bff0f9a59bf5f6b4ff9 SHA256 9f2689dc92a1b053b670e3fe63441f0ac271962e50beeb173c5d83098d9f7468
-EBUILD mlocate-0.23.1.ebuild 1367 RMD160 c9c2ff4afa885fdeb3a5acc9a6ccfce1730a4ef9 SHA1 c9af1e0a791ee35543e1ce6b6ea2febe0ef8ea12 SHA256 4ccd9f05b49ee00b4f69f37467337080c57a6bedc6295c433f54f30dd03b4f75
-MISC ChangeLog 9658 RMD160 7057592ea7f0a595a3d4224532df641c37324367 SHA1 2b49f9af55060218a4093eed072beb9337c4dff6 SHA256 d10ce1a25805988cc18a5f429c44cf652963d6349a1f6e2b78e2237564aec580
+EBUILD mlocate-0.23.1.ebuild 1542 RMD160 2bc0ae6cdaf79ec8d24e9960b9e84a00113a6ea7 SHA1 567c96bd36f3dc31f16523ff4ab96e5a64f13c43 SHA256 e66614ab0da944072288fc27eecced04a2c4004a108e3695f7d07bcdfb755209
+MISC ChangeLog 9950 RMD160 9cc409a08e0882cbdde60e6059dd8020d3d70dba SHA1 a8a9e1febaeb9f9485ab4e69ac559547b9088132 SHA256 0c6bbad251833c13b4dca8121453f6c3600ba6438c23c99ff5eee84d9c616e46
 MISC metadata.xml 269 RMD160 1db2638dff49f3fd7ca729da3e275c5a21019b1f SHA1 a02ae3c5cdfde4f63a1370a7c334d9e72c4887fd SHA256 76fb556342434f4a8ba872bc6dbb7a21f625b5fbd001ee467141d6b710ae82c6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAkzpM4sACgkQNQqtfCuFneMNjACfc/Hp8xgEitlEkkARiwHhdynF
+Wy0AnRTBEjWCyGIuRWSaU1eZAHBhR41h
+=128i
+-----END PGP SIGNATURE-----
