@@ -1,11 +1,11 @@
 # /etc/updatedb.conf: config file for slocate
-# $Id: updatedb.conf,v 1.3 2009/01/29 16:07:33 fauli Exp $
+# $Id: updatedb.conf,v 1.4 2010/11/21 14:57:13 fauli Exp $
 
 # This file sets variables that are used by updatedb.
 # For more info, see the updatedb.conf(5) manpage.
 
 # Filesystems that are pruned from updatedb database
-PRUNEFS="afs auto autofs cifs devfs devpts eventpollfs futexfs gfs hugetlbfs iso9660 mqueue ncpfs nfs NFS nfs4 nfsd nnpfs ocfs ocfs2 pipefs proc ramfs rpc_pipefs selinuxfs sfs shfs smbfs sockfs spufs subfs supermount sysfs tmpfs udf usbfs vperfctrfs"
+PRUNEFS="afs auto autofs cifs devfs devpts eventpollfs futexfs gfs hostfs hugetlbfs iso9660 mqueue ncpfs nfs NFS nfs4 nfsd nnpfs ocfs ocfs2 pipefs proc ramfs rpc_pipefs selinuxfs sfs shfs smbfs sockfs spufs subfs supermount sysfs tmpfs udf usbfs vperfctrfs"
 
 # Paths which are pruned from updatedb database
 PRUNEPATHS="/tmp /var/tmp /root/.ccache"
