@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/mlocate
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/mlocate/ChangeLog,v 1.81 2010/11/15 12:31:09 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/mlocate/ChangeLog,v 1.82 2010/11/21 14:57:13 fauli Exp $
+
+  21 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
+  mlocate-0.23.1.ebuild, files/updatedb.conf:
+  Add hostfs to the list of pruned file systems (bug 345629) and make a
+  warning that the updatedb command can be run manually when mlocate is
+  installed for the first time (bug 345881)
 
   15 Nov 2010; Jeroen Roovers <jer@gentoo.org> mlocate-0.23.1.ebuild:
   Stable for PPC (bug #343987).
